@@ -1,3 +1,4 @@
+	simulate hangup when replay EOF is encountered
 1.3.0
 	improve logging for dspdebug
 	buffer audio when modem is in command-mode and process it when not
